# OpenCLToyExample

./: CMakeLists.txt  main.cpp
cl/: summatrix.cl
cmake/: FindOpenCL.cmake
